--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -33,3 +33,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# ENV
+.env
+
+# mysql_config
+/configs/base.config.ts
